[FE] Review and fix

--- a/public/FE_exerceise_2.html
+++ b/public/FE_exerceise_2.html
@@ -22,17 +22,18 @@
                     <div class="title text-uppercase h2 text-center">
                         comming soon
                     </div>
-                    <div class="clock mt-3 row">
-                        <div class="clock-column col-4">
+                    <div class="clock mt-3 d-flex">
+                        <div class="clock-column mr-5">
                             <div class="d-flex flex-column align-items-center">
                                 <div class="title text-capitalize">hours</div>
                                 <div class="content hour d-flex">
                                     <div class="number">0</div>
                                     <div class="number">0</div>
+                                    <div class="number">0</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="clock-column col-4">
+                        <div class="clock-column mr-5">
                             <div class="d-flex flex-column align-items-center">
                                 <div class="title">minutes</div>
                                 <div class="content minute d-flex">
@@ -41,9 +42,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="clock-column col">
+                        <div class="clock-column ">
                             <div class="d-flex flex-column align-items-center">
-                                <div class="title">seconds</div>
+                                <div class="title ">seconds</div>
                                 <div class="content second d-flex">
                                     <div class="number end">0</div>
                                     <div class="number end">0</div>
@@ -228,98 +229,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous ">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
-    <script type="text/javascript">
-        $(window).on('load', function() {
-            $('#myModal').modal('show');
-        });
-    </script>
 
-    <script>
-        function toggleOpenBox(fa) {
-            if (fa.hasClass('fa-plus')) {
-                fa.removeClass('fa-plus')
-                fa.addClass('fa-minus')
-                return true
-            }
-            fa.removeClass('fa-minus')
-            fa.addClass('fa-plus')
-            return false;
-        }
-
-        function toggleMobileMenu(selector) {
-            // Add animation later
-            $(selector).toggleClass('d-none')
-        }
-
-        $('.footer-item .title').on('click', function() {
-            let fa = ($(this).find('.fa'))
-            let content = $(this).parent().find('.content');
-
-            if (toggleOpenBox(fa)) {
-                // Add animation later
-                $(content).removeClass('d-none');
-            } else {
-                // Add animation later
-                $(content).addClass('d-none');
-            }
-        })
-        $('.hambuger-menu').on('click', () => {
-            toggleMobileMenu('.mobile-menu')
-
-        })
-        $('.outer-zone').on('click', (e) => {
-            var menuitem = $(".menu-item");
-            var clocklayout = $('.clock-layout');
-
-            if (!menuitem.is(e.target) && menuitem.has(e.target).length === 0) {
-                toggleMobileMenu('.mobile-menu')
-            }
-
-            if (!clocklayout.is(e.target) && clocklayout.has(e.target).length === 0) {
-                toggleMobileMenu('.clock-layout-container')
-            }
-        })
-
-        $(document).ready(function() {
-            clockUpdate('29-Feb-2022');
-            setInterval(clockUpdate, 1000, ['29-Feb-2022']);
-        })
-
-        function setNumbers(selector, value) {
-            let numbers = $(selector).children()
-            let strValue = value + '';
-            for (let i = 0; i <= 1; i++) {
-                $(numbers[i]).text(strValue[i])
-            }
-
-        }
-
-
-        function clockUpdate(dueDate) {
-            var date = new Date(),
-                dateValue = (Date.parse(date) / 1000);
-            var dueDateValue = (Date.parse(dueDate) / 1000);
-            var timeLeft = dueDateValue - dateValue
-
-            var days = Math.floor(timeLeft / 86400);
-            var hours = Math.floor((timeLeft - (days * 86400)) / 3600);
-            var minutes = Math.floor((timeLeft - (days * 86400) - (hours * 3600)) / 60);
-            var seconds = Math.floor((timeLeft - (days * 86400) - (hours * 3600) - (minutes * 60)));
-
-            if (hours < "10") {
-                hours = "0" + hours;
-            }
-            if (minutes < "10") {
-                minutes = "0" + minutes;
-            }
-            if (seconds < "10") {
-                seconds = "0" + seconds;
-            }
-
-            setNumbers('.hour', hours)
-            setNumbers('.minute', minutes)
-            setNumbers('.second', seconds)
-        }
+    <script type="text/javascript" src="./js/FE_exercise_2.js">
     </script>
 </body>
 
