--- a/public/FE_exerceise_1.html
+++ b/public/FE_exerceise_1.html
@@ -189,44 +189,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-        function toggleOpenBox(fa) {
-            if (fa.hasClass('fa-plus')) {
-                fa.removeClass('fa-plus')
-                fa.addClass('fa-minus')
-                return true
-            }
-            fa.removeClass('fa-minus')
-            fa.addClass('fa-plus')
-            return false;
-        }
-
-        function toggleMobileMenu(selector) {
-            // Add animation later
-            $(selector).toggleClass('d-none')
-        }
-
-        $('.footer-item .title').on('click', function() {
-            let fa = ($(this).find('.fa'))
-            let content = $(this).parent().find('.content');
-
-            if (toggleOpenBox(fa)) {
-                // Add animation later
-                $(content).removeClass('d-none');
-            } else {
-                // Add animation later
-                $(content).addClass('d-none');
-            }
-        })
-        $('.hambuger-menu').on('click', () => toggleMobileMenu('.mobile-menu'))
-        $('.outer-zone').on('click', (e) => {
-            var menuitem = $(".menu-item");
-
-            if (!menuitem.is(e.target) && menuitem.has(e.target).length === 0) {
-                toggleMobileMenu('.mobile-menu')
-            }
-
-        })
+    <script src="./js/FE_exercise_1.js">
     </script>
 </body>
 
